CourseCreator/Templates/main.css
* {
	box-sizing: border-box;
}

.CcPanels 
{
	position: absolute;
	top: 0;
	left: 0;
	width:  100%;
	height: 100%;
}

.CcPanelSide 
{
	position: absolute;
	top: 0;
	left: 0;
	padding: var(--padding-normal);
	height: 100%;
	width: 300px;
	overflow-y: auto;
}

.CcPanelMain
{
	position: absolute;
	top: 0;
	left: 300px;
	padding: var(--padding-normal);
	width: calc(100% - 300px);
	height: 100%;
}

.CcPanelMain .ContentBlock
{
	background-color: var(--canvas-background);
}

.CcPanelMain .ContentHeader h3
{
	width: 80%;
}

#index 
{
	background-color: light-grey;
	width: 100%;
	height: 100%;
}

#index > ul > li > span 
{
	font-weight: bold;
}

#index ul 
{
	list-style: none;
}

#index ul, #index li 
{
	padding: 0px;
	margin:  0px;
}

#index li 
{
	padding: 0;
}

#index li li
{
	padding: 0 0 0 10px;
}

#index div
{
	height: 20px;
	margin: 4px;
	padding: 4px;
	border-radius: 4px;
}

#index .buttons > span
{
	opacity: 0;
	pointer-events: none;
}

#index .SectionIndex
{
	border: 1px solid var(--border-foreground);
	border-radius: var(--gui-border-radius-normal);
	margin: 0 0 5px 0;
}

#index .SectionIndex > div > span,
#index .PageIndex > div > span
{
	cursor: pointer;
}

#index .SectionIndex > div,
#index .PageIndex > div
{
	padding: 5px;
	height: 30px;
}

#index .SectionButton
{
	height: auto;
}

#index > div > .buttons > span,
#index .SectionButton > .buttons.Active > span,
#index .SectionIndex.Active > .buttons > span
{
	opacity: 1;
	pointer-events: all;
}

#index .SectionButton > .buttons.Active > span
{
	cursor: pointer;
}

#index .SectionButton > .buttons
{
	margin: 0;
	border-top: 0;
	border-radius: var(--gui-border-radius-normal);
	height: 28px;
}

#index > div > .buttons,
#index .SectionIndex > .buttons
{
	text-align: center;
	padding-top: 5px;
	margin: 5px 0 0 0;
	border-top: 1px solid var(--border-foreground);
	width: 100%;
	background: var(--background);
	border-radius: 0;
}

#index > div > .buttons > span,
#index .SectionIndex > .buttons > span
{
	opacity: 0;
	transition: opacity 0.25s;
	pointer-events: none;
}

#IndexHeader
{
	cursor: pointer;
}

#index .SectionIndex.Active > div:not(.buttons),
#index .PageIndex.Active > div
{
	color: var(--module-color-active);
	background: var(--module-background-active);
}


/* -------------------------------*/

#main
{
	height: 100%;
}


.section
{
	height: 100%;
	width: 100%;
}

.page
{
	height: 100%;
	width: 100%;
	overflow-y: auto;
	padding-bottom: 300px;
}

.element .buttons
{
	text-align: center;
	padding-top: 5px;
	margin-top: 5px;
	border-top: 1px solid var(--border-foreground);
}

.element .buttons .IconSmall
{
	cursor: pointer;
}

.element .buttons.right
{
	border: none;
	text-align:  right;
	padding-top: 0px;
	margin-top: 0px;
	height: 0px;
	visibility:  hidden;
}

.element:hover .handle,
.element:hover .buttons.right
{
	visibility: visible;
}

.element .handle
{
	text-align: center;
	display: block;
	width: 18px;
	height: 24px;
	float: left;
	margin: 0 0 0 5px;
	visibility: hidden;
}


.element .buttons .IconSmall
{
	display: inline-block;
}


.checkBoxQuestion {
	padding: 2px;
	margin: 2px;
	width: calc(100% - 10px);
	align-items: left;
	border:  thin solid #E9E9E9;
}

.checkBoxRow{
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	justify-content: left;
	align-items: center;
}

.checkBoxRow .delete {
	flex-basis: 5%;
	visibility: hidden;
}

.checkBoxRow:hover .delete{
	visibility: visible;
}


.checkBoxLabel{
	flex-basis: 90%;
}

.checkBoxTick{
	flex-basis: 5%;
}



.element 
{
	padding:  5px;
	border:  thin solid #E0E0E0;
	margin: 5px;
	display: flex;
	justify-content: center;
	align-items: left;
	flex-direction: column;
	border-radius: var(--gui-border-radius-normal);
	box-shadow: var(--gui-box-shadow);
	background-color: var(--background);
}

.element > p {
	margin: 0px;
	maring-block: 0px;
}

.elementType 
{
	border: solid thin var(--border-foreground);
	padding: 2px 5px;
	text-align: center;
	margin: 0 0 5px 0;
	box-sizing: border-box;
	border-radius: var(--gui-border-radius-normal);
	background-color: var(--background-foreground);
	transition: background 0.15s;
	cursor: grab;
}

.elementType:hover
{
	background-color: var(--background);
}
.elementType:active
{
	cursor: grabbing;
}

/*                     */


.properties > div,
.properties > span
{
	padding: 5px;
	margin: 5px;
}


.properties .right
{
	text-align:  right;
}

.properties .buttons
{
	padding:  5px;
	margin: 5px;
	display: inline-block;
}

.properties .buttons > span > span
{
	border: solid thin var(--border-foreground);
	padding: 5px;
	margin: 5px;
}

